--- a/Changes
+++ b/Changes
@@ -2,3 +2,6 @@ Revision history for Weather::Meteo
 
 0.01	Tue Feb 28 11:16:18 EST 2023
         First draft
+
+0.02
+	Remove references left from the template code
