Look into http://www.cpantesters.org/cpan/report/8b5bb156-bd91-11ed-aba6-9a79f339625c

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Weather::Meteo
 
 0.03
 	Remove unused modules
+	Refactored t/unused.t
 
 0.02	Tue Feb 28 11:57:35 EST 2023
 	Remove references left from the template code
