--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Weather::Meteo
 
+0.04
+	Support Geo::Location::Point object to give a location
+
 0.03	Fri Mar 10 09:35:01 EST 2023
 	Remove unused modules
 	Look into http://www.cpantesters.org/cpan/report/8b5bb156-bd91-11ed-aba6-9a79f339625c
