--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Weather::Meteo
 
-0.04
+0.04	Tue Mar 21 21:49:03 EDT 2023
 	Support Geo::Location::Point object to give a location
 
 0.03	Fri Mar 10 09:35:01 EST 2023
