--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Weather::Meteo
 
 0.05
 	Include the daily overview in the results
+	The database is from 1940
 
 0.04	Tue Mar 21 21:49:03 EDT 2023
 	Support Geo::Location::Point object to give a location
