--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Weather::Meteo
 
-0.05
+0.05	Fri Apr 14 09:55:47 EDT 2023
 	Include the daily overview in the results
 	The database is from 1940
 
