--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Weather::Meteo
 
+0.06
+	Added bin/weather
+
 0.05	Fri Apr 14 09:55:47 EDT 2023
 	Include the daily overview in the results
 	The database is from 1940
