--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Weather::Meteo
 
+0.07
+	Fix http://www.cpantesters.org/cpan/report/b25e6af8-0ce4-11ee-8f82-220d6e8775ea
+
 0.06	Thu Jun 15 20:49:00 EDT 2023
 	Added bin/weather
 	weather() now supports the 'tz' argument
