--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Weather::Meteo
 
-0.09
+0.09	Thu May 30 16:27:39 EDT 2024
 	Attempt to fix https://www.cpantesters.org/cpan/report/cb5e2b52-a699-11ee-9c1e-22106e8775ea
 	Added t/carp.t
 	The date argument to weather() can now be a DateTime, or similar, object
