--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Weather::Meteo
 0.10
 	Better handling of JSON decode errors
 	Added t/30-basics.t
+	Better arg checking
 
 0.09	Thu May 30 16:27:39 EDT 2024
 	Attempt to fix https://www.cpantesters.org/cpan/report/cb5e2b52-a699-11ee-9c1e-22106e8775ea
