More useful error message

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Weather::Meteo
 
+0.11
+	More useful error message
+
 0.10	Thu Feb 13 07:47:59 EST 2025
 	Better handling of JSON decode errors
 	Added t/30-basics.t
