--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Weather::Meteo
 
-0.11
+0.11	Fri Feb 14 08:11:25 EST 2025
 	More useful error message
 	Handle numbers starting with a decimal point
 	Added rate-limiting and caching support
