--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Weather::Meteo
 
+0.12
+	Corrected the documentation for tz
+
 0.11	Fri Feb 14 08:11:25 EST 2025
 	More useful error message
 	Handle numbers starting with a decimal point
