--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Weather::Meteo
 
 0.12
 	Corrected the documentation for tz
+	Handle "0.25" as a co-ordinate
 
 0.11	Fri Feb 14 08:11:25 EST 2025
 	More useful error message
