Use Object::Configure to allow runtime configuration

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Weather::Meteo
 
+0.13
+	Use Object::Configure to allow runtime configuration
+
 0.12	Mon Feb 24 07:44:44 EST 2025
 	Corrected the documentation for tz
 	Handle "-0.25" as a co-ordinate
